# simply-simplify-language

./: .env.dist  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
_streamlit_app/: sprache-vereinfachen.py  utils_prompts.py
