[tool.poetry]
name = "simply-simplify-language"
version = "0.1.0"
description = "Use machine learning to make your institutional communication more understandable and inclusive."
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.36.0"
openai = "^1.35"
anthropic = "^0.30"
mistralai = "^0.4.1"
spacy = "^3.7.5"
numpy = "^1.26"
textdescriptives = "^2.8.2"
python-docx = "^1.1.2"
python-dotenv = "^1.0.1"
pyarrow = "^16.1.0"
fastparquet = "^2024.5.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
